<resources>
    <string name="app_name">Butter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_butterid_intro">Tự thiết kế chiếc bánh của chính mình hoặc gửi tặng những người thân yêu.</string>
    <string name="tab_home">Khám Phá</string>
    <string name="tab_menu">Đặt hàng</string>
    <string name="tab_butterId">Butter ID</string>
    <string name="tab_order">Đơn hàng</string>
    <string name="tab_promotion">Ưu đãi</string>
    <string name="blog1_time">09/11/2022</string>
    <string name="blog1_name">Bánh ngọt có thể làm giảm stress?</string>
    <string name="blog1_des">Cuộc sống ngày này của thế hệ Gen Z có rất nhiều đều cần phải lo lắng, bận tâm
</string>
    <string name="blog2_time">09/11/2022</string>
    <string name="blog2_name">Giới thiệu về thế giới bánh Brioche</string>
    <string name="blog2_des">Brioche là một loại bánh mì phong phú và thơm ngon với vị ngọt ngào và thơm mùi bơ.
</string>
    <string name="blog3_time">09/11/2022</string>
    <string name="blog3_name">Tất tần tật về cake flour</string>
    <string name="blog3_des">Bột bánh bông lan (cake flour) là loại bột có kết cấu mềm thường được sử dụng trong làm bánh, đặc biệt là các loại bánh ngọt.
</string>
    <string name="blog4_time">09/11/2022</string>
    <string name="blog4_name">Câu chuyện về chiếc bánh mì Baguette</string>
    <string name="blog4_des">Tản bộ ở Paris vào buổi sáng, bạn sẽ thấy nhiều người bước ra từ các cửa hàng địa phương, trên tay là những chiếc bánh mì.
</string>
    <string name="event1_name">Ví MoMo khao mỗi ngày 50k</string>
    <string name="event2_name">Quà Noel từ Butter</string>
    <string name="event3_name">Ghé mang đi giảm 15%</string>
    <string name="event4_name">Halloween giảm 10%</string>
    <string name="line"> <strike> 40.000 </strike> </string>
    <string name="product1_name">Daily Cookie</string>
    <string name="product1_price">70.000</string>
    <string name="product1_oldPrice"><strike>80.000</strike></string>
    <string name="product2_name">Cookie Oatmeal</string>
    <string name="product2_price">40.000</string>
    <string name="product2_oldPrice"><strike>50.000</strike></string>
    <string name="product_promotion">Khuyến mãi</string>
    <string name="orderId">Đơn hàng #I17201026722021</string>
    <string name="orderCustomer">Người nhận: Tiên Huỳnh</string>
    <string name="orderAddress">Địa chỉ: Trường Đại học Kinh tế - Luật</string>
    <string name="checkout_success">Bạn đã đặt hàng thành công và tích lũy được 30 Butter. Đơn hàng của bạn sẽ được giao trước 5 giờ chiều hôm nay.</string>
    <string name="addressNow">Trường Đại học Kinh tế - Luật</string>
    <string name="addressHome">12 Đồng Khởi, Quận 1, TPHCM</string>
    <string name="addressFirm">Takashimaya, Saigon Centre, Quận 1, TPHCM</string>
    <string-array name="city_array">
        <item>Hà Nội</item>
        <item>TPHCM</item>
        <item>Đà Nẵng</item>
        <item>Quy Nhơn</item>
        <item>Nghệ An</item>
    </string-array>
    <string-array name="district_array">
        <item>Quận 1</item>
        <item>Quận 3</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 7</item>
        <item>Quận 8</item>
        <item>Quận 10</item>
        <item>Quận Gò Vấp</item>
        <item>Thành phố Thủ Đức</item>
    </string-array>
    <string-array name="ward_array">
        <item>Phường 1</item>
        <item>Phường 2</item>
        <item>Phường 3</item>
        <item>Phường 4</item>
        <item>Phường 5</item>
        <item>Phường 6</item>
        <item>Phường Linh Tây</item>
        <item>Phường Linh Đông</item>
    </string-array>
    <string name="moreOption">Vui lòng chọn phương thức thanh toán phù hợp cho đơn hàng của bạn</string>
    <string name="verify_otp_title">Xác nhận OTP</string>
    <string name="verify_otp_description1">Mã xác nhận OTP đã được gửi đến:</string>
    <string name="verify_otp_description2">Vui lòng nhập mã xác nhận</string>
    <string name="verify_otp_btn">Xác nhận OTP</string>
    <string name="verify_otp_notreceive">Không nhận được tin nhắn?</string>
    <string name="verify_otp_resendotp">Gửi lại mã OTP</string>
    <string name="userpolicy_dieu1title">1. CHẤP THUẬN CÁC ĐIỀU KIỆN SỬ DỤNG</string>
    <string name="userpolicy_dieu1detail">Khi sử dụng ứng dụng của Butter, Quý khách đã mặc nhiên chấp thuận các điều khoản và điều kiện sử dụng được quy định dưới đây. Để biết được các sửa đổi mới nhất, Quý khách nên thường xuyên kiểm tra lại “Điều Kiện Sử Dụng”. Butter có quyền thay đổi, điều chỉnh, thêm hay bớt các nội dung của “Điều Kiện Sử dụng” tại bất kỳ thời điểm nào. Nếu Quý khách vẫn tiếp tục sử dụng ứng dụng sau khi có các thay đổi như vậy thì có nghĩa là Quý khách đã chấp thuận các thay đổi đó.</string>
    <string name="userpolicy_dieu2title">2. TÍNH CHẤT CỦA THÔNG TIN HIỂN THỊ</string>
    <string name="userpolicy_dieu2detail">Các nội dung hiển thị trên ứng dụng nhằm mục đích cung cấp thông tin về bánh sinh nhật, thông tin sản phẩm và dịch vụ mà mà Butter đang cung cấp. Các thông tin khác liên quan nhằm phục vụ nhu cầu tìm hiểu của khách hàng đều được ghi rõ nguồn cung cấp.</string>
    <string name="userpolicy_dieu3title">3. LIÊN KẾT ĐẾN WEBSITE KHÁC</string>
    <string name="userpolicy_dieu3detail">Ứng dụng cung cấp một số liên kết tới trang Web hoặc nguồn dữ liệu khác. Quý khách tự chịu trách nhiệm khi sử dụng các liên kết này. Butter không tiến hành thẩm định hay xác thực nội dung, tính chính xác, quan điểm thể hiện tại các trang Web và nguồn dữ liệu liên kết này. Butter từ chối bất cứ trách nhiệm pháp lý nào liên quan tới tính chính xác, nội dung thể hiện, mức độ an toàn và việc cho hiển thị hay che đi các thông tin trên các trang Web và nguồn dữ liệu nói trên.</string>
    <string name="userpolicy_dieu4title">4. LUẬT ĐIỀU CHỈNH</string>
    <string name="userpolicy_dieu4detail">Việc truy cập vào ứng dụng này có điều kiện theo sự đồng ý của quý khách rằng toàn bộ những thông tin trên trang ứng dụng và toàn bộ các vấn đề phát sinh giữa quý khách và chúng tôi sẽ được điều chỉnh bởi pháp luật Việt Nam và rằng mọi tranh chấp phát sinh giữa quý khách và chúng tôi sẽ căn cứ vào quyền hạn xét xử của các tòa án Việt Nam.</string>
    <string name="userpolicy_dieu5title">5. NGHĨA VỤ CỦA NGƯỜI SỬ DỤNG ỨNG DỤNG</string>
    <string name="userpolicy_dieu5detail">Khi sử dụng ứng dụng này, xin vui lòng đồng ý rằng:</string>
    <string name="userpolicy_dieu5detail1">1. Quý khách chấp nhận trách nhiệm về tài chính đối với toàn bộ các giao dịch được thực hiện theo tên và tài khoản của quý khách.</string>
    <string name="userpolicy_dieu5detail2">2. Để có năng lực pháp lý, quý khách phải từ 18 tuổi trở lên.</string>
    <string name="userpolicy_dieu5detail3">3. Quý khách bảo đảm rằng mọi thông tin mà quý khách cung cấp về chính quý khách và về bất cứ ai khác là hoàn toàn chính xác.</string>
    <string name="userpolicy_dieu5detail4">4. Không được sử dụng trang web này để thực hiện hành vi đăng ký sai trái, gian lận.</string>
    <string name="userpolicy_dieu5detail5">5. Nghiêm cấm mọi hành vi phát tán tài liệu mang tính đe dọa, phỉ báng, khiêu dâm, chính trị hoặc phân biệt chủng tộc hoặc bất kỳ tài liệu bất hợp pháp hoặc khiêu khích nào khác thông qua ứng dụng này.</string>
    <string name="userpolicy_dieu5detail6">6. Quý khách không được sửa đổi, sao chép, truyền tải, phân phối, bán, phát tán, hoặc cấp phép ứng dụng này và bất kỳ phần nội dung nào của nó dưới bất kỳ hình thức nào trừ trường hợp quý khách sao chép thông tin từ ứng dụng này để sử dụng cho cá nhân quý khách và mang tính phi thương mại.</string>
    <string name="userpolicy_dieu6title">6. CÁC ĐIỀU KIỆN ĐĂNG KÝ</string>
    <string name="userpolicy_dieu6detail">Khi thực hiện đăng ký qua ứng dụng của Butter, xin vui lòng thực hiện mối quan hệ theo hợp đồng trực tiếp (ràng buộc pháp lý) với chúng tôi. Các điều kiện đăng ký bao gồm những giới hạn và những loại trừ về trách nhiệm pháp lý, và phí thay đổi phải thanh toán nếu việc đăng ký bị thay đổi sau khi đã được xác nhận. Chúng tôi đề xuất rằng quý khách nên đọc kỹ các điều kiện đăng ký được áp dụng khi thực hiện đăng ký.</string>
    <string name="userpolicy_dieu7title">7. CÁC TRƯỜNG HỢP BẤT KHẢ KHÁNG</string>
    <string name="userpolicy_dieu7detail">Butter không chịu trách nhiệm trước khách hàng về những thay đổi hoặc hủy bỏ vì những lý do khách quan và chủ quan như: Động đất, núi lửa, bão gió, chiến tranh, đình công, biểu tình, khủng bố, rối loạn chính trị… Các giải pháp hoặc đền bù (nếu có) sẽ phụ thuộc vào Nhà cung cấp dịch vụ liên quan.</string>
    <string name="userpolicy_dieu8title">8. KHIẾU NẠI VÀ BỒI THƯỜNG</string>
    <string name="userpolicy_dieu8detail">Nếu quý khách có khiếu nại đến Butter, trước hết khách hàng phải thông báo cho quản lý càng sớm càng tốt để khắc phục vấn đề khiếu nại đó. Nếu không hài lòng, quý khách có thể liên hệ với đại diện (bán hàng) của Butter trong khi thực hiện dịch vụ để Butter có cơ hội khắc phục vấn đề đó. Nếu vẫn chưa hài lòng thì khách hàng cần gửi mọi vấn đề khiếu nại trực tiếp đến Butter trong vòng 30 ngày kể từ ngày kết thúc dịch vụ. Butter sẽ không nhận mọi trách nhiệm đối với những khiếu nại nhận được sau thời hạn này.</string>
    <string name="userpolicy_dieu9title">9. BẢN QUYỀN VÀ THƯƠNG HIỆU</string>
    <string name="userpolicy_dieu9detail">Bản quyền trong nội dung của ứng dụng này thuộc Butter. Chúng tôi bảo lưu bản quyền và có toàn bộ quyền sở hữu đối với ứng dụng này và toàn bộ nội dung của trên ứng dụng. Thương hiệu Butter và mọi ký hiệu, logo và hình ảnh của Butter trên ứng dụng này đã được đăng ký bảo hộ bản quyền của Butter.</string>
    <string name="userpolicy_dieu10title">10. NHỮNG THAY ĐỔI</string>
    <string name="userpolicy_dieu10detail">Butter có thể thay đổi bất kỳ phương diện hoặc nội dung nào của ứng dụng, bao gồm những điểm đặc trưng, những thông tin hoặc nội dung khác vào bất cứ lúc nào mà không cần phải đưa ra thông báo trước.</string>
    <string name="promotionscreen_makhuyenmai_title">Bạn có mã khuyến mãi?</string>
    <string name="promotionscreen_makhuyenmai_description">Hãy nhập mã khuyến mãi của bạn bên dưới để đổi thưởng.</string>
    <string name="blog1detail_bigtitle">BÁNH NGỌT CÓ THỂ LÀM GIẢM STRESS?</string>
    <string name="blog1detail_textunderbigtitle">Cuộc sống ngày này của thế hệ Gen Z có rất nhiều đều cần phải lo lắng, bận tâm. Do vậy mà tình trạng stress diễn ra cũng rất phổ biến và rất nghiệm trọng. Và bánh ngọt trở thành một món đồ ăn giúp các bạn trẻ giảm stress hiệu quả. Hãy cùng Tiệm bánh Butter tìm hiểu về tác dụng giảm stress của bánh ngọt nhé!</string>
    <string name="blog1detail_title1">Hiệu quả giảm stress của đồ ngọt</string>
    <string name="name_dailycookie">Daily Cookie</string>
    <string name="storage_30">Còn 30 sản phẩm</string>
    <string name="gia">Giá</string>
    <string name="gia_45">45.000</string>
    <string name="unit_100gr">/100gr</string>
    <string name="mota">Mô tả</string>
    <string name="mota_dailycookie">Daily cookie nóng giòn ra lò mỗi ngày với 3 hương vị chính là mâm xôi hạnh nhân (raspberry), trà xanh (matcha) và vụn chocolate (chocolate chips).</string>
    <string name="danhgia">Đánh giá</string>
    <string name="xemthem">Xem thêm</string>
    <string name="comment1">Phải gọi là “chiến thần” của nhà Butter luôn á, nhờ Daily Cookie mà thành fan “guột” của Butter mấy năm nay</string>
    <string name="info1">Ngoc Han | 10/11/2022</string>
    <string name="comment2">Có thể nào đừng ngon như vậy nữa được hong, em thích lắmm</string>
    <string name="info2">Mai Hoa | 15/10/2022</string>
    <string name="quantity">1</string>
    <string name="dathang">Thêm 45.000đ</string>
    <string name="time_ord1">16:50 - 25/10/2022</string>
    <string name="order1">Đơn hàng #I17201026722021</string>
    <string name="point">30</string>
</resources>