<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:src="@drawable/cookiedaily1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_dailycookie"
            android:textSize="26sp"
            android:fontFamily="@font/quicksand_bold"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rating"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_5.0"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:fontFamily="@font/quicksand_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_30"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:fontFamily="@font/quicksand_medium"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gia"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand_bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gia_45"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            android:textColor="@color/primary_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_100gr"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="12sp"
            android:textColor="@color/neutral_3"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mota"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mota_dailycookie"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="12sp"
        android:fontFamily="@font/quicksand_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danhgia"
            android:textSize="14sp"
            android:fontFamily="@font/quicksand_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xemthem"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:gravity="end"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/primary_4"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating5star"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="12sp"
        android:fontFamily="@font/quicksand_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="10sp"
        android:fontFamily="@font/quicksand_light"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating5star"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="12sp"
        android:fontFamily="@font/quicksand_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="10sp"
        android:fontFamily="@font/quicksand_light"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="128dp">

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/removebutton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:fontFamily="@font/quicksand_semibold"/>

        <ImageButton
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/addbutton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dathang"
            android:textColor="@color/neutral_5"
            android:textSize="18dp"
            android:layout_marginStart="96dp"
            android:backgroundTint="@color/primary_3"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="end"/>

    </LinearLayout>


</LinearLayout>