<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txttime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/time_ord1"
                android:textColor="@color/neutral_5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtorderID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/order1"
                android:textColor="@color/neutral_5"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtnumberPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/point"
            android:textSize="24sp"
            android:textAlignment="textEnd"
            android:textColor="@color/primary_3"/>
    </LinearLayout>
</LinearLayout>